No sharing in mail for closed sites

--- a/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
@@ -48,19 +48,24 @@
                 </td>
             </tr>
         </tr>
-        </tr>
     </table>
-    <table class="donation-table-share twelve columns">
-        <tr class="donation-table-share-title">{% trans "Support even more by sharing the project with your network:" %}</tr>
-        <tr class="donation-share-buttons">
-            <td>
-                <a class="action-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{site}}{{link}}">
-                    {% trans 'Share on facebook' %}
-                </a>
-                <a class="action-twitter" href="https://twitter.com/intent/tweet?url={{site}}{{link}}">
-                    {% trans 'Share on Twitter' %}
-                </a>
-            </td>
-        </tr>
-    </table>
+    {% if SHARE_OPTIONS.facebook or SHARE_OPTIONS.twitter %}
+        <table class="donation-table-share twelve columns">
+            <tr class="donation-table-share-title">{% trans "Support even more by sharing the project with your network:" %}</tr>
+            <tr class="donation-share-buttons">
+                <td>
+                    {% if SHARE_OPTIONS.facebook %}
+                        <a class="action-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{site}}{{link}}">
+                            {% trans 'Share on facebook' %}
+                        </a>
+                    {%  endif %}
+                    {% if SHARE_OPTIONS.twitter %}
+                        <a class="action-twitter" href="https://twitter.com/intent/tweet?url={{site}}{{link}}">
+                            {% trans 'Share on Twitter' %}
+                        </a>
+                    {% endif %}
+                </td>
+            </tr>
+        </table>
+    {% endif %}
 {% endblock content %} 
