Don't wrap dates in donation mail

--- a/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
@@ -34,7 +34,7 @@
                     <table>
                         <tr class="order-block">
                             <td>Date</td>
-                            <td>{{donation.created}}</td>
+                            <td nowrap="true">{{donation.created}}</td>
                         </tr>
                         <tr class="order-block">
                             <td>Method</td>
