use fixed path for mail logo

--- a/bluebottle/common/templates/base.mail.html
+++ b/bluebottle/common/templates/base.mail.html
@@ -32,7 +32,7 @@
                                                     <tr>
                                                         <td class="twelve columns">
 
-                                                            <img src="{{site}}{{TENANT_MAIL_PROPERTIES.logo}}">
+                                                            <img src="{{site}}/images/logo-email.gif">
 
                                                         </td>
                                                         <td class="expander"></td>
