pass receiver name to project realised emails BB-6512

--- a/bluebottle/projects/templates/projects/mails/project_complete.mail.html
+++ b/bluebottle/projects/templates/projects/mails/project_complete.mail.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-    {% blocktrans with receiver_name=to.short_name %}
+    {% blocktrans %}
 
         Hi {{ receiver_name }},
         <br><br>
