--- a/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation.mail.html
@@ -2,18 +2,23 @@
 {% load i18n %}
 
 {% block content %}
-    {% blocktrans with amount=amount donor_name=donor_name site=site link=link %}
+    <p class="donation-intro">
+    {% if pledged %}
+        {% blocktrans with donor_name=donation.user.first_name first_name=donation.project.owner.first_name slug=donation.project.slug %}
 
-        Hello {{ first_name }},
-        <br><br>
-        You received a &euro; {{ amount }} donation from {{ donor_name }}.
-        <br><br>
-        Quickly thank your supporter by posting a personal message on your
-        project page.
-    {% endblocktrans %}
-{% endblock %}
+        Hello {{ first_name }}, you've just received an invoiced donation by {{ donor_name }}. The amount will be transfered directly to your bank account by {{donor_name}}. If not, please contact the user via <email for platform admin>.
+        {% endblocktrans %}
+    {% else %}
+        {% blocktrans with donor_name=donation.user.first_name first_name=donation.project.owner.first_name slug=donation.project.slug %}
 
-{% block action %}
-    <a href="{{ site }}{{ link }}"
-       class="action-email">{% trans 'Say thanks' context 'email' %}!</a>
-{% endblock %}
+        Hello {{ first_name }}, you received a donation from {{ donor_name }}. Quickly thank your supporter by posting a personal message on your project page.
+        {% endblocktrans %}
+    {% endif %}
+    </p>
+    
+    <table class="donation-table twelve columns">
+        {% include 'bb_donations/mails/donation.html' %}
+        {% include 'bb_donations/mails/payment_details.html' %}
+    </table>
+
+{% endblock content %} 
