--- a/bluebottle/payments_pledge/templates/payments_pledge/mails/pledge_details.mail.html
+++ b/bluebottle/payments_pledge/templates/payments_pledge/mails/pledge_details.mail.html
@@ -3,9 +3,9 @@
 
 {% block content %}
     <p class="donation-intro">
-        {% blocktrans with donor_name=donation.user.full_name owner_name=donation.project.owner.full_name slug=donation.project.slug %}
+        {% blocktrans with donor_name=donation.user.full_name owner_name=donation.project.owner.full_name slug=donation.project.slug project_name=donation.project.title %}
 
-        A project just received an invoiced donation by {{ donor_name }}. The amount should be transfered directly to the bank account of {{ owner_name }}.
+        A project just received an invoiced donation by {{ donor_name }}. The amount should be transfered directly to the bank account of {{ owner_name }} for the project {{ project_name }}.
         {% endblocktrans %}
     </p>
     
