--- a/bluebottle/cms/templates/wagtailadmin/pages/_preview_button_on_create.html
+++ b/bluebottle/cms/templates/wagtailadmin/pages/_preview_button_on_create.html
@@ -1,4 +1,4 @@
 <button class="button action-preview {% if icon %}icon icon-view{% endif %}"
-    data-action="{% url 'wagtailadmin_pages:preview_on_add' content_type.app_label content_type.model parent_page.id %}{% if mode %}?mode={{ mode|urlencode }}{% endif %}"
-    data-placeholder="{% url 'wagtailadmin_pages:preview' %}"
-    data-windowname="wagtail_preview_{{ parent_page.id }}_child">{{ label }}</button>
+    data-action="{% url 'preview-draft-cms-redirect' page.id %}{% if mode %}?mode={{ mode|urlencode }}{% endif %}"
+    data-placeholder="{% url 'preview-draft-cms-redirect' page.id %}"
+    data-windowname="wagtail_preview_{{ page.id }}">{{ label }}</button>
