Remove some items from admin menu to have more space

--- a/bluebottle/bluebottle_dashboard/static/css/admin/dashboard.css
+++ b/bluebottle/bluebottle_dashboard/static/css/admin/dashboard.css
@@ -51,3 +51,8 @@
     text-align: right;
 }
 
+#header ul#navigation-menu li.first a {
+    margin: 0;
+    text-indent: 0;
+    background: none;
+}
