Fix some translations for donation mail

--- a/bluebottle/bb_donations/templates/bb_donations/mails/payment_details.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/payment_details.html
@@ -9,15 +9,15 @@
             <td>
                 <table>
                     <tr class="order-block">
-                        <td>Date</td>
+                        <td>{% trans "Date" %}</td>
                         <td nowrap="true">{{donation.created}}</td>
                     </tr>
                     <tr class="order-block">
-                        <td>Method</td>
+                        <td>{% trans "Method" %}</td>
                         <td>{{payment_method}}</td>
                     </tr>
                     <tr class="order-block">
-                        <td>Order</td>
+                        <td>{% trans "Order" %}</td>
                         <td>{{donation.order.id}}</td>
                     </tr>
                 </table>
