--- a/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
@@ -1,4 +1,5 @@
 {% extends "base.mail.html" %}
+{% load money %}
 {% load i18n %}
 
 {% block content %}
@@ -24,8 +25,8 @@
 
     {% if pledged %}
     <p class="twelve columns">
-        {% blocktrans with amount=donation.amount.amount currency=donation.amount.currency account_holder_name=donation.project.account_holder_name account_number=donation.project.account_number %}
-            <strong>Please transfer the amount of {{ currency }} {{ amount }} to the following bank account:</strong><br />
+        {% blocktrans with amount=donation.amount|format_money account_holder_name=donation.project.account_holder_name account_number=donation.project.account_number %}
+            <strong>Please transfer the amount of {{ amount }} to the following bank account:</strong><br />
             {{account_holder_name}}<br />
             {{account_number}}
         {% endblocktrans %}
