--- a/bluebottle/projects/templates/projects/mails/organization_project_complete.mail.html
+++ b/bluebottle/projects/templates/projects/mails/organization_project_complete.mail.html
@@ -5,7 +5,11 @@
     {% blocktrans %}
 
         Hi {{ receiver_name }},
-        TODO: Fix content
+        <br><br>
+        Congratulations! Your project "{{ title }}" has been realised! It's time
+        to celebrate!<br>
+        <br>
+        TODO: fix content
     {% endblocktrans %}
 
     {% if survey_link %}
