--- a/bluebottle/projects/templates/projects/mails/organization_project_complete.mail.html
+++ b/bluebottle/projects/templates/projects/mails/organization_project_complete.mail.html
@@ -5,21 +5,18 @@
     {% blocktrans %}
 
         Hi {{ receiver_name }},
-        <br><br>
-        Congratulations! Your project "{{ title }}" has been realised! It's time
-        to celebrate!<br>
-        <br>
-        TODO: fix content
+
+        Thank you for your partnership with {{site}}. 
     {% endblocktrans %}
 
     {% if survey_link %}
         {% blocktrans with link=survey_link %}
-        <a href="{{ link }}">Please take a moment to fill in a survey about the impact you created<a/>
+        To record the impact we have with our projects, your input is extremely important.
+
+        Please help us by filling out our 1 minute <a href="{{ link }}">survey</a>
         {% endblocktrans %}
     {% endif %}
 {% endblock %}
 
 {% block action %}
-    <a href="{{ site }}{{ link }}"
-       class="action-email">{% trans 'Share an update' context 'email' %}</a>
 {% endblock %}`
