--- a/bluebottle/projects/templates/projects/mails/organization_project_complete.mail.html
+++ b/bluebottle/projects/templates/projects/mails/organization_project_complete.mail.html
@@ -10,13 +10,18 @@
     {% endblocktrans %}
 
     {% if survey_link %}
+        <br><br>
         {% blocktrans with link=survey_link %}
         To record the impact we have with our projects, your input is extremely important.
-
+        <br><br>
         Please help us by filling out our 1 minute <a href="{{ link }}">survey</a>
         {% endblocktrans %}
     {% endif %}
 {% endblock %}
 
 {% block action %}
+    {% survey_link %}
+        <a href="{{ survey_link }}"
+           class="action-email">{% trans 'Fill out survey' %}</a>
+    {% endif %}
 {% endblock %}`
