--- a/bluebottle/tasks/templates/tasks/mails/task_status_closed.mail.html
+++ b/bluebottle/tasks/templates/tasks/mails/task_status_closed.mail.html
@@ -7,12 +7,12 @@
         Hello {{ receiver_name }},
 
         The status of your task "{{ title }}" has changed to 'closed'.
-        Please let us know if your <a href="{{ site }}{{ link}}">task is realised.</a> 
+        Please let us know if your <a href="{{ site }}{{ link}}/edit">task is realised.</a> 
 
     {% endblocktrans %}
 {% endblock %}
 
 {% block action %}
-    <a href="{{ site }}{{ link }}/edit"
+    <a href="{{ site }}{{ link }}"
        class="action-email">{% trans 'Go to task' context 'email' %}</a>
 {% endblock %}
