--- a/bluebottle/recurring_donations/templates/admin/recurring_donations/monthlybatch/change_list.html
+++ b/bluebottle/recurring_donations/templates/admin/recurring_donations/monthlybatch/change_list.html
@@ -4,7 +4,9 @@
 {% block object-tools-items %}
     {% if has_add_permission %}
         <li>
-            <a href="{% url 'admin:monthly-batch-prepare' %}" class="addlink">Prepare new monthly batch</a>
+            <a href="{% url 'admin:recurring_donations_monthlybatch_prepare' %}" class="addlink">
+                Prepare new monthly batch
+            </a>
         </li>
     {% endif %}
 {% endblock %}
