--- a/bluebottle/bb_donations/templates/bb_donations/mails/donation.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/donation.html
@@ -6,7 +6,7 @@
         <th class="donation-title">
             {% trans "Donation" %} {% if donation.reward %} - {{donation.reward.title}} {% endif %}
         </th>
-        <th class="donation-amount">{% donation.amount|format_money }}</th>
+        <th class="donation-amount">{{ donation.amount|format_money }}</th>
         <tr class="donation-location">
             <td><a href="{{ site }}/projects/{{donation.project.slug}}">{{donation.project.title}}</a></td>
         </tr>
