--- a/bluebottle/projects/templates/admin/projects/project/change_form.html
+++ b/bluebottle/projects/templates/admin/projects/project/change_form.html
@@ -5,6 +5,7 @@
     <li>
         {% if original.payout_status == 'needs_approval' %}
             <a href="{% url 'admin:projects_project_approve_payout' object_id %}" style="background-color: darkred">
+                {% trans  "Approve payout" %}
             </a>
         {% elif original.payout_status %}
             <a href="#" style="background-color: #eee; color: #999">
