--- a/bluebottle/cms/templates/admin/cms/preview/stats.html
+++ b/bluebottle/cms/templates/admin/cms/preview/stats.html
@@ -2,7 +2,7 @@
 <h4>{{instance.title}}</h4>
 <dl>
 {% for stat in instance.stats.stat_set.all %}
-    <dt style="display: inline">{{ stat.name }}</dt>
-    <dd>Some number<dd>
+    <dt style="display: inline">{{ stat.title }}</dt>
+    <dd>{{ stat.value }}<dd>
 {% endfor %}
 </dl>
