--- a/bluebottle/projects/templates/admin/projects/project/change_form.html
+++ b/bluebottle/projects/templates/admin/projects/project/change_form.html
@@ -4,7 +4,7 @@
 {% block object-tools-items %}
     <li>
         {% if original.payout_status == 'needs_approval' %}
-            <a href="{% url 'admin:projects_project_approve_payout' object_id %}" style="background-color: darkred">
+            <a href="{% url 'admin:projects_project_approve_payout' object_id %}" style="background-color: darkgreen">
                 {% trans  "Approve payout" %}
             </a>
         {% elif original.payout_status %}
