--- a/bluebottle/projects/templates/admin/projects/project/change_form.html
+++ b/bluebottle/projects/templates/admin/projects/project/change_form.html
@@ -3,14 +3,16 @@
 
 {% block object-tools-items %}
     <li>
-        {% if perms.projects.approve_payout and original.payout_status == 'needs_approval' %}
-            <a href="{% url 'admin:projects_project_approve_payout' object_id %}" style="background-color: darkgreen">
-                {% trans  "Approve payout" %}
-            </a>
-        {% elif original.payout_status %}
-            <a href="#" style="background-color: #eee; color: #999">
-                {% trans  "Payout" %} {{ original.payout_status }}
-            </a>
+        {% if original.campaign_ended != None %}
+            {% if perms.projects.approve_payout and original.payout_status == 'needs_approval' %}
+                <a href="{% url 'admin:projects_project_approve_payout' object_id %}" style="background-color: darkgreen">
+                    {% trans  "Approve payout" %}
+                </a>
+            {% elif original.payout_status %}
+                <a href="#" style="background-color: #eee; color: #999">
+                    {% trans  "Payout" %} {{ original.payout_status }}
+                </a>
+            {% endif %}
         {% endif %}
     </li>
     {{ block.super }}
